<resources>

  <string name="app_name">Uplift</string>

  <string name="elevation_label">Elevation</string>
  <string name="elevation_value">%ddp</string>

  <string name="drag_up_and_down">Drag up and down</string>
  <string name="use_controls_below">Use controls below</string>
  <string name="tweak_shadow">Shadow controls</string>
  <string name="shadow_color_label">Shadow color</string>
  <string name="shadow_ambient_color_label">Ambient</string>
  <string name="shadow_spot_color_label">Spot</string>
  <string name="color_picker_title_ambient">Ambient color</string>
  <string name="color_picker_title_spot">Spot color</string>
  <string name="brightness_label">Brightness:</string>
  <string name="alpha_label">Alpha:</string>
  <string name="close">Close</string>
  <string name="menu_title_reset">Reset</string>
  <string name="menu_tooltip_reset">Reset to defaults</string>

  <string name="onboarding_tooltip">Drag up to reveal controls</string>

</resources>
