<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="@dimen/panel_content_margin">

  <SeekBar
    android:id="@+id/elevationBar"
    style="@style/Widget.Uplift.SeekBar"
    android:layout_width="@dimen/match_constraint"
    android:layout_height="@dimen/seekbar_height"
    android:layout_marginTop="@dimen/value_label_margin_bottom"
    android:max="@integer/max_elevation_progress"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/elevationValue"
    app:layout_constraintEnd_toEndOf="parent"
    tools:progress="10" />

  <TextView
    android:id="@+id/elevationLabel"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/match_constraint"
    android:text="@string/elevation_label"
    android:textAppearance="@style/TextAppearance.Uplift.SeekBarLabel"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/elevationValue"
    app:layout_constraintBottom_toBottomOf="@+id/elevationValue" />

  <TextView
    android:id="@+id/elevationValue"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/elevation_value"
    android:textAppearance="@style/TextAppearance.Uplift.SeekBarValue"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:text="10dp" />

  <TextView
    android:id="@+id/shadowColorLabel"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/match_constraint"
    android:layout_marginTop="@dimen/seekbar_margin_bottom"
    android:text="@string/shadow_color_label"
    android:textAppearance="@style/TextAppearance.Uplift.SeekBarLabel"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/elevationBar" />

  <me.seebrock3r.elevationtester.widget.ColorView
    android:id="@+id/ambientColor"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/value_label_margin_bottom"
    android:text="@string/shadow_ambient_color_label"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/shadowColorLabel"
    app:layout_constraintEnd_toStartOf="@id/spotColor"
    app:layout_constraintHorizontal_chainStyle="spread"
    tools:color="#f00" />

  <me.seebrock3r.elevationtester.widget.ColorView
    android:id="@+id/spotColor"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/shadow_spot_color_label"
    app:layout_constraintStart_toEndOf="@id/ambientColor"
    app:layout_constraintTop_toTopOf="@id/ambientColor"
    app:layout_constraintEnd_toEndOf="parent"
    tools:color="#0f0" />

</androidx.constraintlayout.widget.ConstraintLayout>
